--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -11,7 +11,7 @@
 
         <style>
             .main-grid {
-                background-color: grey;
+                background-color: white;
                 margin-top: 87px;
                 width: 100%;
                 height: 1000px;
@@ -56,7 +56,8 @@
             }
             
             hr {
-                width: 90%;
+                margin-left: 20px;
+                margin-right: 20px;
             }
 
         </style>
