--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -68,7 +68,7 @@
                 <div>2019.12.14.</div>
                 <div>맑음</div>
             </div>
-            <div id="home" class="grid-item">sangyeop lee</div>
+            <div id="home" class="grid-item">hello</div>
             <div class="grid-item"></div>
         </div>
         <div class="main-grid">
