--- a/project/templates/navbar.css
+++ b/project/templates/navbar.css
@@ -8,6 +8,7 @@
     top: 0;
     width: 100%;
     background-color: #f8f1e9;
+    opacity: 0.9;
     padding: 20px;
     margin-left: -10px;
     display: grid;
