--- a/project/templates/dateTime.html
+++ b/project/templates/dateTime.html
@@ -17,6 +17,10 @@
             #columns .grid-item {
                 padding: 20px;
             }
+            #columns #calendar {
+                background-color: beige;
+                height: 290px;
+            }
             #columns table {
                 border-collapse: collapse;
             }
