--- a/project/templates/appendday.html
+++ b/project/templates/appendday.html
@@ -1,6 +1,6 @@
 <form method="POST" action="{{ url_for('addDDay') }}">
     {{ form.csrf_token }}
-    {{ form.name() }}
-    {{ form.date() }}
+    Name: {{ form.name() }} <br>
+    Date: {{ form.date() }} <br>
     {{ form.submit() }}
 </form>
