--- a/TOFO/css/home.css
+++ b/TOFO/css/home.css
@@ -10,25 +10,28 @@ header {
     height: 800px;
 }
 
-@media (max-width: 10000px) {
+@media screen and (min-width: 800px) {
     .grid-container {
-        grid-template-columns: 1fr 900px;
+        grid-template-columns: 1fr 450px;
+    }
+    html {
+        font-size: 80% !important;
     }
 }
-@media (max-width: 1680px) {
+@media screen and (min-width: 1080px) {
     .grid-container {
         grid-template-columns: 1fr 600px;
     }
-}
-
-@media (max-width: 1680px) {
-    .grid-container {
-        grid-template-columns: 1fr 300px;
+    html {
+        font-size: 95% !important;
     }
 }
-@media (max-width: 800px) {
+@media screen and (min-width: 1300px) {
     .grid-container {
-        grid-template-columns: 1fr 200px;
+        grid-template-columns: 1fr 800px;
+    }
+    html {
+        font-size: 110% !important;
     }
 }
 
@@ -49,6 +52,13 @@ header {
     font-size: 2.5rem;
     font-weight: 600;
 }
+#add-schedule {
+    position: relative;
+    right: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
 #todo > h2 {
     margin: 2.4rem 4.8rem 0;
     font-size: 1.7rem;
@@ -64,8 +74,12 @@ input + label {
 #todo li {
     display: table;
     position: relative;
-    margin: 1.2rem 7rem 0;
+    padding: .6rem 2rem;
+    margin-left: 5rem;
     font-size: 1rem;
+}
+#todo li:hover {
+    background-color: #eee;
 }
 #todo li:first-child {
     margin-top: 1.8rem;
@@ -76,21 +90,22 @@ input + label {
 #todo input + label::after {
     content: '';
     width: 0;
-    height: 0.1rem;
-    left: -5%;
-    top: 0.4rem;
+    height: .1rem;
+    left: 1.5rem;
+    top: .8rem;
     position: absolute;
     display: block;
     background: rgb(252, 87, 87);
+    box-shadow: 0 .3rem rgb(252, 87, 87);
     transition: width .3s ease;
 }
 #todo input:checked + label::after {
-    width: 110%;
+    width: Calc(100% - 3rem);
 }
 #todo input + label {
     opacity: 1;
     transition: opacity .3s ease;
 }
 #todo input:checked + label {
-    opacity: 0.7;
+    opacity: .7;
 }
