--- a/TOFO/css/home.css
+++ b/TOFO/css/home.css
@@ -63,7 +63,7 @@ header {
     margin: 2.4rem 4.8rem 0;
     font-size: 1.7rem;
 }
-input + label {
+label {
     cursor: pointer;
 }
 .cursor-default {
@@ -74,20 +74,30 @@ input + label {
 #todo li {
     display: table;
     position: relative;
-    padding: .6rem 2rem;
     margin-left: 5rem;
     font-size: 1rem;
-}
-#todo li:hover {
-    background-color: #eee;
 }
 #todo li:first-child {
     margin-top: 1.8rem;
 }
+
 #todo input {
     display: none;
 }
-#todo input + label::after {
+#todo input:hover+span {
+    background-color: #eee;
+}
+#todo input:checked:hover+span {
+    background-color: #fff;
+}
+
+#todo input + span {
+    display: table;
+    padding: .6rem 2rem;
+    opacity: 1;
+    transition: opacity .3s ease;
+}
+#todo input + span::after {
     content: '';
     width: 0;
     height: .1rem;
@@ -99,13 +109,9 @@ input + label {
     box-shadow: 0 .3rem rgb(252, 87, 87);
     transition: width .3s ease;
 }
-#todo input:checked + label::after {
+#todo input:checked + span::after {
     width: Calc(100% - 3rem);
 }
-#todo input + label {
-    opacity: 1;
-    transition: opacity .3s ease;
-}
-#todo input:checked + label {
+#todo input:checked + span {
     opacity: .7;
 }
